# vscode-v8-heap-tools

./: .gitignore  Cargo.toml  README.md  pipeline.yml
.github/workflows/: ci.yml  release.yml
v8-heap-cli/: Cargo.toml  readme.md
v8-heap-cli/src/: cli.rs  main.rs  summary.rs
v8-heap-parser/: .npmignore  Cargo.toml  LICENSE  README.md  package.json
v8-heap-parser/src/: decoder.rs  error.rs  graph.rs  lib.rs  perf.rs  wasm.rs
