[package]
name = "v8-heap-parser"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-arena = "2.0"
thiserror = "1.0.50"
ouroboros = "0.18.0"
petgraph = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
